--- a/Lunch Planner/web/AdminPages/tabs-accordion.css
+++ b/Lunch Planner/web/AdminPages/tabs-accordion.css
@@ -1,19 +1,19 @@
 .AccordionTitle, .AccordionContent, .AccordionContainer
 {
   position:relative;
-  width:200px;
+  width:800px;
 }
 
 .AccordionTitle
 {
-  height:20px;
+  height:40px;
   overflow:hidden;
   cursor:pointer;
   font-family:Arial;
-  font-size:8pt;
+  font-size:12pt;
   font-weight:bold;
   vertical-align:middle;
-  text-align:center;
+  text-align:left;
   background-repeat:repeat-x;
   display:table-cell;
   background-image:url('title_repeater.jpg');
@@ -29,8 +29,8 @@
 
 .AccordionContainer
 {
-  border-top: solid 1px #C1C1C1;
-  border-bottom: solid 1px #C1C1C1;
-  border-left: solid 2px #C1C1C1;
-  border-right: solid 2px #C1C1C1;
+  border-top: solid 0px #C1C1C1;
+  border-bottom: solid 0px #C1C1C1;
+  border-left: solid 0px #C1C1C1;
+  border-right: solid 0px #C1C1C1;
 }
