--- a/trunk/Lunch Planner/web/MainPage/pro_dropdown_3.css
+++ b/trunk/Lunch Planner/web/MainPage/pro_dropdown_3.css
@@ -27,15 +27,15 @@ way to fit your requirements.
 #nav li:hover {position:relative; z-index:200;}
 
 #nav li:hover ul.sub
-{left:1px; top:38px; background: #50b5d0; padding:3px; border:1px solid #0b4d97; white-space:nowrap; width:90px; height:auto; z-index:300;}
+{left:1px; top:38px; background: #000; padding:3px; border:1px solid #000; white-space:nowrap; width:90px; height:auto; z-index:300;}
 #nav li:hover ul.sub li
 {display:block; height:20px; position:relative; float:left; width:90px; font-weight:normal;}
 #nav li:hover ul.sub li a
-{display:block; font-size:11px; height:18px; width:88px; line-height:18px; text-indent:5px; color:#000; text-decoration:none;border:1px solid #50b5d0;}
+{display:block; font-size:11px; height:18px; width:88px; line-height:18px; text-indent:5px; color:#fff; text-decoration:none;border:1px solid #000;}
 #nav li ul.sub li a.fly
-{background:#50b5d0 url(arrow.gif) 80px 6px no-repeat;}
+{background:#000 url(arrow.gif) 80px 6px no-repeat;}
 #nav li:hover ul.sub li a:hover 
-{background:#000; color:#fff; border-color:#fff;}
+{background:#000; color:#fff; border-color:#000;}
 #nav li:hover ul.sub li a.fly:hover
 {background:#000 url(arrow_over.gif) 80px 6px no-repeat; color:#fff;}
 
@@ -45,7 +45,7 @@ way to fit your requirements.
 #nav li:hover li:hover li:hover ul,
 #nav li:hover li:hover li:hover li:hover ul,
 #nav li:hover li:hover li:hover li:hover li:hover ul
-{left:90px; top:-4px; background: #50b5d0; padding:3px; border:1px solid #0b4d97; white-space:nowrap; width:90px; z-index:400; height:auto;}
+{left:90px; top:-4px; background: #50b5d0; padding:3px; border:1px solid #000; white-space:nowrap; width:90px; z-index:400; height:auto;}
 
 #nav ul, 
 #nav li:hover ul ul,
@@ -58,9 +58,9 @@ way to fit your requirements.
 #nav li:hover li:hover li:hover a.fly,
 #nav li:hover li:hover li:hover li:hover a.fly,
 #nav li:hover li:hover li:hover li:hover li:hover a.fly
-{background:#3f96a9 url(arrow_over.gif) 80px 6px no-repeat; color:#fff; border-color:#fff;} 
+{background:#000 url(arrow_over.gif) 80px 6px no-repeat; color:#fff; border-color:#000;} 
 
 #nav li:hover li:hover li a.fly,
 #nav li:hover li:hover li:hover li a.fly,
 #nav li:hover li:hover li:hover li:hover li a.fly
-{background:#50b5d0 url(arrow.gif) 80px 6px no-repeat; color:#000; border-color:#50b5d0;} 
+{background:#000 url(arrow.gif) 80px 6px no-repeat; color:#000; border-color:#000;} 
