--- a/trunk/Lunch Planner/web/MainPage/pro_dropdown_3.css
+++ b/trunk/Lunch Planner/web/MainPage/pro_dropdown_3.css
@@ -10,24 +10,24 @@ way to fit your requirements.
 =================================================================== */
 
 .preload1 {background: url(three_0a.gif);}
-.preload2 {background: url(three_1a.gif);}
+.preload2 {background: url(three_0a.gif);}
 
 #nav {padding:0; margin:0; list-style:none; height:38px; background:#fff url(three_0.gif) repeat-x; position:relative; z-index:500; font-family:arial, verdana, sans-serif;}
 #nav li.top {display:block; float:left;}
-#nav li a.top_link {display:block; float:left; height:35px; line-height:33px; color:#ccc; text-decoration:none; font-size:11px; font-weight:bold; padding:0 0 0 12px; cursor:pointer;background: url(three_0.gif);}
+#nav li a.top_link {display:block; float:left; height:35px; line-height:33px; color:#fff; text-decoration:none; font-size:11px; font-weight:bold; padding:0 0 0 12px; cursor:pointer;background: url(three_0.gif);}
 #nav li a.top_link span {float:left; display:block; padding:0 24px 0 12px; height:35px; background: url(three_0.gif) right top no-repeat;}
-#nav li a.top_link span.down {float:left; display:block; padding:0 24px 0 12px; height:35px; background: url(three_0a.gif) no-repeat right top;}
+#nav li a.top_link span.down {float:left; display:block; padding:0 60px 0 60px; height:35px; background: url(three_0a.gif) no-repeat right top;}
 
-#nav li:hover a.top_link {color:#fff; background: url(three_1.gif) no-repeat;}
-#nav li:hover a.top_link span {background:url(three_1.gif) no-repeat right top;}
-#nav li:hover a.top_link span.down {background:url(three_1a.gif) no-repeat right top; padding-bottom:3px;}
+#nav li:hover a.top_link {color:#fff; background: url(three_0.gif) no-repeat;}
+#nav li:hover a.top_link span {background:url(three_0.gif) no-repeat right top;}
+#nav li:hover a.top_link span.down {background:url(three_0a.gif) no-repeat right top; padding-bottom:3px;}
 
 /* Default list styling */
 
 #nav li:hover {position:relative; z-index:200;}
 
 #nav li:hover ul.sub
-{left:1px; top:38px; background: #000; padding:3px; border:1px solid #000; white-space:nowrap; width:90px; height:auto; z-index:300;}
+{left:1px; top:38px; background: #000; padding:3px; border:1px solid #000; white-space:nowrap; width:179px; height:auto; z-index:300;}
 #nav li:hover ul.sub li
 {display:block; height:20px; position:relative; float:left; width:90px; font-weight:normal;}
 #nav li:hover ul.sub li a
