--- a/Lunch Planner/web/CSS/HeaderCSS.css
+++ b/Lunch Planner/web/CSS/HeaderCSS.css
@@ -1,11 +1,13 @@
-table{
+#header
+{
     width: 80%;
     border-style: outset;
     border-color: whitesmoke;
     background-repeat: repeat;
     background-image: url("/Lunch_Planner/grey_bar.jpg");
 }
-a{
+#whiteLink
+{
     color: whitesmoke;
     text-decoration: none;
 }
