--- a/trunk/Lunch Planner/web/CSS/HeaderCSS.css
+++ b/trunk/Lunch Planner/web/CSS/HeaderCSS.css
@@ -1,13 +1,18 @@
-#header
+.header
 {
-    width: 80%;
-    border-style: outset;
+    width: 100%;
+    height: 120px;
+    border-style: ridge;
     border-color: whitesmoke;
     background-repeat: repeat;
     background-image: url("/Lunch_Planner/grey_bar.jpg");
 }
-#whiteLink
+.whiteLink
 {
     color: whitesmoke;
     text-decoration: none;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
