--- a/trunk/Lunch Planner/web/CSS/GlavnaUreduvackaCSS.css
+++ b/trunk/Lunch Planner/web/CSS/GlavnaUreduvackaCSS.css
@@ -1,5 +1,5 @@
 body{
-    margin: 1% 20% 5% 20%;
+    margin: 1% 15% 5% 15%;
     background-color: #D6D6D6;
     
 }
@@ -13,4 +13,16 @@ div{
 
 .najavnaTabela{
    elevation: 30deg; 
+}
+th
+{
+    text-align: center;
+    font-size: large;
+}
+a{
+    text-align: center;
+}
+.izbornaTabela{
+}
+.nazad{
 }
